--- a/style.css
+++ b/style.css
@@ -60,8 +60,7 @@ p.my_company {
 }
 button[type="button"]:hover{
     box-shadow: 5px 5px 10px rgb(26, 25, 25);
-    background-color:rgb(219, 179, 46);\
-    font-size:20px;
+    background-color:rgb(219, 179, 46);
 }
 
 button[type="button"]{
@@ -76,6 +75,7 @@ button[type="button"]{
     font-weight: bold;
     cursor:pointer;
     box-shadow: 5px 5px 10px rgb(32, 32, 32);
+    font-size:25px;
 }
 
 p.course_intro{
